<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">
    <!-- Mobile -->
    <LinearLayout style="@style/line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"/>
        <LinearLayout style="@style/item">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/item_et"
                    android:id="@+id/phone_et"
                    android:hint="@string/mobile_phone"
                    android:inputType="phone"
                    android:text="8800223322"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
    </LinearLayout>
    <!-- end Mobile -->
    <View style="@style/separator"/>
    <!-- Email -->
    <LinearLayout style="@style/line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"
            />
        <LinearLayout style="@style/item">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/item_et"
                    android:id="@+id/email_et"
                    android:hint="@string/email"
                    android:text="vladpurga@my.com"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"
            />
    </LinearLayout>
    <!-- end Email -->
    <View style="@style/separator"/>
    <!-- VK Profile -->
    <LinearLayout style="@style/line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_vk_black_24dp"
            />
        <LinearLayout style="@style/item">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/item_et"
                    android:id="@+id/vk_et"
                    android:hint="@string/profile_vk"
                    android:text="vk.com/vladpurga"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"
            />
    </LinearLayout>
    <!-- end VK Profile -->
    <View style="@style/separator"/>
    <!-- Github Repository -->
    <LinearLayout style="@style/line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_github_black_24dp"
            />
        <LinearLayout style="@style/item">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/item_et"
                    android:id="@+id/github_et"
                    android:hint="@string/repo_github"
                    android:text="github.com/vladpurga/DevIntensive"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"
            />
    </LinearLayout>
    <!-- end Github Repository -->
    <View style="@style/separator"/>
    <!-- About -->
    <LinearLayout style="@style/line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>
        <LinearLayout style="@style/item">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/item_et"
                    android:id="@+id/about_et"
                    android:hint="@string/about_me"
                    android:text="Lorem ipsum lorem dolor sit amet, consectetur adipiscing elit, sed do"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- end About -->
    <View style="@style/separator"/>
</LinearLayout>
